<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutScreenActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_width="247dp"
        android:layout_height="249dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="16dp"
        android:src="@android:color/darker_gray" />
    <TextView
        android:text="@string/nama"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/email"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/asal"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RatingBar
        android:id="@+id/rBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:stepSize="0.5"
        android:theme="@style/Widget.AppCompat.RatingBar" />

    <Button
        android:id="@+id/button"
        style="@style/ButtonGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/give_me_some_stars" />

</LinearLayout>